tests/errors/functions/009.err
[1m[0;31merror: [0mcannot use 'x' from an enclosing function - pass it as a parameter
  [1m[34m-->[0m tests/errors/functions/009.ura:6:16
  [1m[34m|[0m
[1m[34m6 |[0m         return x
  [1m[34m|[0m                [1;31m^[0m
